# rust_graphql_tutorial

./: .gitignore  Cargo.toml  Makefile  README.md
infrastructure/: config.tf  graphql_lambda.tf
src/: lambda_graph.rs  local_graph.rs  main.rs  schema.rs
