[package]
name = "rust_graphql_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
juniper = "0.15.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
log = "0.4"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"


actix-web-lab = "0.10"
actix-cors = "0.6"

[[bin]]
name = "local_graph"
path = "src/main.rs"


[[bin]]
name = "graphql"
path = "src/lambda_graph.rs"

